--- a/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/CSS/style.css
+++ b/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/CSS/style.css
@@ -4,6 +4,7 @@
     --primary-color: #0A1128;
     --white-color: #FFFFFF;
     --light-gray-color: #EEEEEE;
+    --secondary-color: crimson;
     --gap: 3rem;
 }
 
@@ -19,12 +20,14 @@ font-family: 'Open Sans', sans-serif;
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 2rem;
     color: var(--primary-color);
+    line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -57,8 +60,12 @@ a {
     text-decoration: none;
 }
 
+p {
+    margin-bottom: 2rem;
+}
+
 .main-bg {
-    background-image: url(../img/main-bg.svg.svg);
+    background-image: url(../img/main-bg.svg);
     background-size: cover;
     background-position: center center;
     color: var(--white-color);
@@ -66,10 +73,11 @@ a {
 
 .white-bg {
     background-color: var(--white-color);
+    color: var(--primary-color);
 }
 
 .main-content {
-    max-width: 1200px;
+    max-width: 120rem;
     margin: 0 auto;
     padding: var(--gap );
 }
@@ -85,7 +93,8 @@ a {
     left: 0;
     right: 0;
     width: 100%;
-    border-bottom: 1px solid var(--light-gray-color);
+    z-index: 1;
+    border-bottom: 0.1rem solid var(--light-gray-color);
 }
 
 .menu-content {
@@ -127,11 +136,52 @@ a {
     left: 50%;
     width: 0;
     height: 0.2rem;
-    background-color: crimson;
+    background-color: var(--secondary-color);
     transition: all 300ms ease-in-out;
 }
 
 .menu ul li a:hover::after {
-    width: 50px;
+    width: 50%;
     left: 25%;
 }
+
+.menu-spacing {
+    height: 65px;
+}
+
+.intro-content {
+    position: relative;
+    top: -6.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1.51fr;
+    gap: var(--gap);
+    height: 100vh;
+}
+
+.intro-text-content, .intro-img {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+}
+
+.intro-text-content h2 {
+    font-size: 6rem;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
+    line-height: 1;
+}
+
+.intro-img img {
+    max-width: 100%;
+    height: auto;
+}
+
+.top3-content {
+    max-width: 64rem;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    height: 100vh;
+    text-align: center;
+}
+
