--- a/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/CSS/style.css
+++ b/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/CSS/style.css
@@ -79,7 +79,7 @@ p {
 .main-content {
     max-width: 120rem;
     margin: 0 auto;
-    padding: var(--gap );
+    padding: 10rem var(--gap );
 }
 
 .section {
@@ -151,11 +151,11 @@ p {
 
 .intro-content {
     position: relative;
-    top: -6.5rem;
+    /*top: -6.5rem;*/
     display: grid;
     grid-template-columns: 1fr 1.51fr;
     gap: var(--gap);
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .intro-text-content, .intro-img {
@@ -179,9 +179,99 @@ p {
 .top3-content {
     max-width: 64rem;
     display: flex;
-    flex-flow: column wrap;
+    /*flex-flow: column wrap;*/
+    flex-direction: column;
+    flex-wrap: nowrap;
     justify-content: center;
     height: 100vh;
     text-align: center;
 }
 
+.grid-one-content {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+.grid-main-heading {
+    margin-bottom: 1rem;
+}
+
+.grid-description {
+    padding-bottom: 5rem;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: var(--gap);
+    counter-reset: grid-counter;
+}
+
+.grid h3 {
+    font-size: 3rem;
+    position: relative;
+    padding-left: 5rem;
+    padding-bottom: 2rem;
+}
+
+.grid h3::before {
+    counter-increment: grid-counter;
+    content: counter(grid-counter);
+    position: absolute;
+    font-size: 8rem;
+    font-style: italic;
+    top: -4rem;
+    left: -2rem;
+    transform: rotate(5);
+}
+
+.gallery-img {
+    width: 100%;
+    max-width: 36rem;
+    min-height: 36rem;
+    overflow: hidden;
+}
+
+.gallery-img img {
+    transition: all 300ms ease-in-out;
+}
+
+.gallery-img img:hover {
+    transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
+}
+
+.responsive-table {
+    overflow: hidden;
+    overflow-x: auto;   
+}
+
+table {
+    min-width: 360px;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table caption {
+    font-style: italic;
+    font-size: 1.6rem;
+    text-align: left;
+    margin-bottom: 1rem;
+}
+
+table td, table th {
+    white-space: nowrap;
+    padding: 1rem;
+    text-align: left;
+    border: 0.1rem solid var(--light-gray-color);
+
+}
+
+tfoot td, table th {
+    background-color: var(--light-gray-color);
+}
+
+.contact-form {
+    grid-column: span 2;
+}
