--- a/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/CSS/style.css
+++ b/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/CSS/style.css
@@ -11,6 +11,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 /*
@@ -275,3 +276,70 @@ tfoot td, table th {
 .contact-form {
     grid-column: span 2;
 }
+
+.contact-form .form-grid {
+    border: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--gap);
+}
+
+.form-group {
+    min-width: 320px;
+    flex: 1 1 auto;
+    
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 1rem;
+}
+
+.form-group input, .form-group textarea {
+    border: none;
+    background-color: var(--white-color);
+    padding: 1.5rem 2rem;
+    width: 100%;
+    font-size: 3rem;
+    outline: none;
+
+}
+
+.form-group input:focus, .form-group textarea:focus {
+    box-shadow: 0px 0px 10px 2px var(--secondary-color);
+}
+
+body .full-width {
+    width: 100%;
+    flex: 1 1 100%;
+}
+
+.form-group button {
+    border: 0.5rem solid var(--white-color);
+    background: none;
+    color: var(--white-color);
+    padding: 1.5rem 2rem;
+    font-size: 3rem;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+}
+
+.form-group button:hover {
+    border: 0.5rem solid var(--primary-color);
+    background: var(--white-color);
+    color: var(--primary-color);
+
+}
+
+.form-group ::placeholder {
+    color: #0a112849;
+}
+
+.form-grid legend {
+    font-style: italic;
+    font-size: 2.5rem;
+    text-align: left;
+    margin-bottom: 3rem;
+}
+
