--- a/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/CSS/style.css
+++ b/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/CSS/style.css
@@ -365,6 +365,22 @@ body .full-width {
     display: none;
 }
 
+.back-to-top {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    background-color: var(--white-color);
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color: var(--primary-color);
+    transform: rotate(-90deg);
+    border: 0.1rem solid var(--primary-color);
+}
+
 /* MEDIA TABLET */
 @media (max-width: 800px) {
     .intro-content, .grid {
